--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,11 @@
   align-items: center;
   flex-flow: column wrap;
 }
+
+.appContainer {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column wrap;
+}
