--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,7 @@
 .appContainer {
   min-height: 100vh;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-flow: column wrap;
 }
