--- a/src/app.css
+++ b/src/app.css
@@ -2,7 +2,7 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
   flex-flow: column wrap;
 }
 
